--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,13 @@ environment:
 isar_version: &isar_version 3.1.0+1
 
 dependencies:
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.0.0
+  google_fonts: ^6.1.0
   intl: ^0.18.1
   isar: 3.1.0+1
   isar_flutter_libs: 3.1.0+1
@@ -25,12 +26,15 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.6
-  flutter_lints: ^2.0.0
+  flutter_gen_runner: ^5.3.2
   flutter_test:
     sdk: flutter
   isar_generator: 3.1.0+1
   json_serializable: ^6.7.1
   lint: ^2.1.2
+
+flutter_gen:
+  output: lib/generated/
 
 flutter:
   generate: true
@@ -39,3 +43,21 @@ flutter:
 
   assets:
     - assets/images/
+
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Poppins-Black.ttf
+          weight: 900
+
+flutter_intl:
+  enabled: true
