--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,12 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.3.5
   flutter_secure_storage: ^9.0.0
+  get_it: ^7.6.4
+  go_router: ^12.1.0
   google_fonts: ^6.1.0
+  injectable: ^2.3.2
   intl: ^0.18.1
   isar: 3.1.0+1
   isar_flutter_libs: 3.1.0+1
@@ -27,8 +31,10 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.2
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.4.1
   isar_generator: 3.1.0+1
   json_serializable: ^6.7.1
   lint: ^2.1.2
