--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,11 @@ environment:
 isar_version: &isar_version 3.1.0+1
 
 dependencies:
+  connectivity_plus: ^5.0.1
   cupertino_icons: ^1.0.6
+  dio: ^5.3.3
+  dio_cache_interceptor: ^3.4.4
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -26,6 +30,7 @@ dependencies:
   isar: 3.1.0+1
   isar_flutter_libs: 3.1.0+1
   json_annotation: ^4.8.1
+  pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.2
 
 dev_dependencies:
