--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,10 +1,10 @@
 flutter_native_splash:
   color: "#FFFFFF"
-  image: assets/images/app_logo2.png
+  image: assets/images/app_icon.png
   color_dark: "#1C1B1F"
   android_12:
     color: "#FFFFFF"
-    image: assets/images/app_logo2.png
+    image: assets/images/app_icon.png
     color_dark: "#1C1B1F"
   android: true
   ios: true
