--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,11 @@ dependencies:
   isar_flutter_libs: 3.1.0+1
   json_annotation: ^4.8.1
   logger: ^2.0.2+1
+  path_provider: ^2.1.1
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.0.3
   shared_preferences: ^2.2.2
+  supercharged: ^2.1.1
 
 dev_dependencies:
   bloc_test: ^9.1.5
