--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.3.5
   flutter_secure_storage: ^9.0.0
+  geolocator: ^10.1.0
   get_it: ^7.6.4
   go_router: ^12.1.0
   google_fonts: ^6.1.0
@@ -35,6 +36,8 @@ dependencies:
   json_annotation: ^4.8.1
   logger: ^2.0.2+1
   path_provider: ^2.1.1
+  permission_handler: ^11.0.1
+  pin_code_fields: ^8.0.1
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.0.3
   shared_preferences: ^2.2.2
