--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 isar_version: &isar_version 3.1.0+1
 
 dependencies:
+  badges: ^3.1.2
   bloc: ^8.1.2
   connectivity_plus: ^5.0.1
   cupertino_icons: ^1.0.6
@@ -39,6 +40,7 @@ dependencies:
   permission_handler: ^11.0.1
   pin_code_fields: ^8.0.1
   pretty_dio_logger: ^1.3.1
+  pull_to_refresh: ^2.0.0
   retrofit: ^4.0.3
   shared_preferences: ^2.2.2
   supercharged: ^2.1.1
