--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 isar_version: &isar_version 3.1.0+1
 
 dependencies:
+  background_location: ^0.11.8
   badges: ^3.1.2
   bloc: ^8.1.2
   connectivity_plus: ^5.0.1
@@ -26,6 +27,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_local_notifications: ^16.1.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.3.5
