--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
-        android:label="Driver"
+        android:label="Smart Driver"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
