--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 1.0.0+4
+version: 1.0.0+7
 
 environment:
   sdk: ">=3.1.5 <4.0.0"
@@ -11,6 +11,7 @@ environment:
 isar_version: &isar_version 3.1.0+1
 
 dependencies:
+  alice: ^0.4.1
   background_location: ^0.11.8
   badges: ^3.1.2
   bloc: ^8.1.2
@@ -19,6 +20,7 @@ dependencies:
   device_info_plus: ^9.1.0
   dio: ^5.3.3
   dio_cache_interceptor: ^3.4.4
+  dio_cache_interceptor_isar_store: ^1.0.1
   dropdown_search: ^5.0.6
   equatable: ^2.0.5
   firebase_core: ^2.22.0
@@ -36,7 +38,6 @@ dependencies:
   get_it: ^7.6.4
   go_router: ^12.1.0
   google_fonts: ^6.1.0
-  hydrated_bloc: ^9.1.2
   injectable: ^2.3.2
   intl: ^0.18.1
   isar: 3.1.0+1
