--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   dio_cache_interceptor_isar_store: ^1.0.1
   dropdown_search: ^5.0.6
   equatable: ^2.0.5
+  fancy_dio_inspector: ^1.6.1
   firebase_core: ^2.22.0
   firebase_crashlytics: ^3.4.4
   firebase_messaging: ^14.7.4
@@ -44,6 +45,7 @@ dependencies:
   isar_flutter_libs: 3.1.0+1
   json_annotation: ^4.8.1
   logger: ^2.0.2+1
+  mockito: ^5.4.3
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
   pin_code_fields: ^8.0.1
